new static data added for client side testing