@@ -3,6 +3,7 @@ package com.mycompany.portalapi.security;
 
 import com.mycompany.portalapi.constants.RoleName;
 import lombok.RequiredArgsConstructor;
+import org.apache.catalina.filters.CorsFilter;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -10,7 +11,6 @@ import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
@@ -20,20 +20,21 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @EnableWebSecurity
 @Configuration
 @RequiredArgsConstructor
 public class SecurityConfig {
     private final JwtAuthenticationFilter authenticationFilter;
-    @Value("${allowed.origin}")
+    @Value("${allowed.origin")
     private String crossOrigin;
-
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
-        httpSecurity.csrf().disable();
-        httpSecurity.cors(Customizer.withDefaults());
-        return httpSecurity.authorizeHttpRequests(auth -> {
+
+        return httpSecurity.cors(Customizer.withDefaults())
+                .csrf().disable()
+                .authorizeHttpRequests(auth -> {
                     auth.requestMatchers("api/v1/students/search**",
                                     "/v2/api-docs",
                                     "/v3/api-docs",
@@ -48,10 +49,9 @@ public class SecurityConfig {
                                     "webjars/**"
                             )
                             .permitAll();
-                    auth.requestMatchers(HttpMethod.GET, "api/v1/files/student-profiles/*").permitAll();
-                    auth.requestMatchers(HttpMethod.GET, "api/v1/files/user-profiles/*").permitAll();
+                    auth.requestMatchers(HttpMethod.GET, "api/v1/files/student-profiles/**").permitAll();
+                    auth.requestMatchers(HttpMethod.GET, "api/v1/files/user-profiles/**").permitAll();
                     auth.requestMatchers(HttpMethod.POST, "api/v1/auth/authenticate").permitAll();
-
                     auth.requestMatchers(HttpMethod.GET, "api/v1/students/pagination/*/*").permitAll();
                     auth.requestMatchers(HttpMethod.POST, "api/v1/files/student-profiles/*").hasAnyAuthority(RoleName.ADMIN.getValue(), RoleName.STUDENT.getValue());
                     auth.requestMatchers(HttpMethod.PUT, "api/v1/files/student-profiles/*").hasAuthority(RoleName.ADMIN.getValue());
@@ -67,20 +67,26 @@ public class SecurityConfig {
                     auth.requestMatchers(HttpMethod.GET, "api/v1/files/post-files/*/*").permitAll();
                     auth.requestMatchers(HttpMethod.GET, "api/v1/posts/?**").hasAnyAuthority(RoleName.STUDENT.getValue(),RoleName.ADMIN.getValue(), RoleName.TEACHER.getValue());
                     auth.requestMatchers(HttpMethod.GET, "api/v1/posts/**").permitAll();
+                    auth.requestMatchers(HttpMethod.GET, "api/v1/field-of-studies/**").permitAll();
+                    auth.requestMatchers(HttpMethod.POST, "api/v1/field-of-studies/**").hasAnyAuthority(RoleName.ADMIN.getValue());
                 }).addFilterBefore(authenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                .httpBasic(Customizer.withDefaults())
                 .build();
     }
 
     @Bean
-    CorsConfigurationSource corsConfigurationSource() {
+    CorsConfigurationSource corsConfigurationSource(){
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(crossOrigin, crossOrigin+"**"));
-        configuration.setAllowedMethods(Arrays.asList("GET","POST"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization"));
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000/"));
+        configuration.setAllowedMethods(Arrays.asList(HttpMethod.GET.name(), HttpMethod.POST.name(), HttpMethod.PUT.name(), HttpMethod.DELETE.name()));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
+
+
 
 
 }
